--- a/sign_up.html
+++ b/sign_up.html
@@ -7,6 +7,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="image-container">Image</div>
+    <div id="sing-up-container">
+        <div>Join us today.</div>
+        <div>
+            <form action="" id="sign-up">
+                <p>
+                    <label for="first-name">First name</label>
+                    <input type="text" id="first-name" name="first-name" placeholder="FIRST NAME" required>
+
+                    <label for="last-name">Last name</label>
+                    <input type="text" id="last-name" name="last-name" placeholder="LAST NAME" required>
+                </p>
+                <p>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="EMAIL" required>
+
+                    <label for="phone">Phone</label>
+                    <input type="tel" id="phone" name="phone" placeholder="PHONE" required>
+                </p>
+                <p>
+                    <label for="pwd">Password</label>
+                    <input type="password" id="pwd" name="pwd" placeholder="pwd" required>
+
+                    <label for="confirm-pwd">Confirm Password</label>
+                    <input type="password" id="confirm-pwd" name="confirm-pwd" placeholder="confirm-pwd" required>
+                </p>
+            </form>
+        </div>
+        <div>
+            <button type="submit">Create Account</button>
+            <div>
+                Already have an account? <a href="" id="log-in">Log in</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
