Add image container css

--- a/sign_up.html
+++ b/sign_up.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="image-container">Image</div>
-    <div id="sing-up-container">
-        <div>Join us today.</div>
+    <div id="image-container">
+        <img src="./images/background.png" alt="">
+        <div id="logo-container"></div>
+    </div>
+    <div id="sign-up-container">
+        <div>Join us today</div>
         <div>
             <form action="" id="sign-up">
                 <p>
