--- a/sign_up.html
+++ b/sign_up.html
@@ -12,30 +12,43 @@
         <div id="logo-container"></div>
     </div>
     <div id="sign-up-container">
-        <div>Join us today</div>
-        <div>
+        <div id="sign-up-title">Join us today</div>
+        <div id="form-container">
             <form action="" id="sign-up">
-                <p>
-                    <label for="first-name">First name</label>
-                    <input type="text" id="first-name" name="first-name" placeholder="FIRST NAME" required>
 
-                    <label for="last-name">Last name</label>
-                    <input type="text" id="last-name" name="last-name" placeholder="LAST NAME" required>
-                </p>
-                <p>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="EMAIL" required>
+                <div id="row">
+                    <p>
+                        <label for="first-name">First name</label>
+                        <input type="text" id="first-name" name="first-name" placeholder="FIRST NAME" required>
+                    </p>
+                    <p>
+                        <label for="last-name">Last name</label>
+                        <input type="text" id="last-name" name="last-name" placeholder="LAST NAME" required>
+                    </p>
+                </div>
 
-                    <label for="phone">Phone</label>
-                    <input type="tel" id="phone" name="phone" placeholder="PHONE" required>
-                </p>
-                <p>
-                    <label for="pwd">Password</label>
-                    <input type="password" id="pwd" name="pwd" placeholder="pwd" required>
+                <div id="row">
+                    <p>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="EMAIL" required>
+                    </p>
+                    <p>
+                        <label for="phone">Phone</label>
+                        <input type="tel" id="phone" name="phone" placeholder="PHONE" required>
+                    </p>
+                </div>
 
-                    <label for="confirm-pwd">Confirm Password</label>
-                    <input type="password" id="confirm-pwd" name="confirm-pwd" placeholder="confirm-pwd" required>
-                </p>
+                <div id="row">
+                    <p>
+                        <label for="pwd">Password</label>
+                        <input type="password" id="pwd" name="pwd" placeholder="PASSWORD" required>
+                    </p>
+                    <p>
+                        <label for="confirm-pwd">Confirm Password</label>
+                        <input type="password" id="confirm-pwd" name="confirm-pwd" placeholder="CONFIRM PASSWORD" required>
+                    </p>
+                </div>
+
             </form>
         </div>
         <div>
