Finish button and login design.

--- a/sign_up.html
+++ b/sign_up.html
@@ -51,11 +51,16 @@
 
             </form>
         </div>
-        <div>
-            <button type="submit">Create Account</button>
-            <div>
-                Already have an account? <a href="" id="log-in">Log in</a>
+        <div id="submit-section">
+
+            <div id="submit-button-container">
+                <button type="submit">Create Account</button>
             </div>
+
+            <div id="log-in-container">
+                Already have an account? <a href="" id="log-in">Login</a>
+            </div>
+
         </div>
     </div>
 </body>
