--- a/sign_up.html
+++ b/sign_up.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="image-container">
-        <img src="./images/background.png" alt="">
-        <div id="logo-container"></div>
+        <img src="./images/background.png" alt="" id="background">
+        <div id="logo-container"><img src="./images/whale.png" alt="whale" id="whale">Whale-Come</div>
     </div>
     <div id="sign-up-container">
         <div id="sign-up-title">Join us today</div>
@@ -58,7 +58,7 @@
             </div>
 
             <div id="log-in-container">
-                Already have an account? <a href="" id="log-in">Login</a>
+                Already have an account?<a href="" id=" log-in">Login</a>
             </div>
 
         </div>
