--- a/sign_up.html
+++ b/sign_up.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="image-container">
@@ -14,16 +15,18 @@
     <div id="sign-up-container">
         <div id="sign-up-title">Join us today</div>
         <div id="form-container">
-            <form action="" id="sign-up">
+            <form action="" method="POST" id="sign-up">
 
                 <div id="row">
                     <p>
                         <label for="first-name">First name</label>
                         <input type="text" id="first-name" name="first-name" placeholder="FIRST NAME" required>
+                        <span class='error' id="first-name-error" hidden>please enter a valid name</span>
                     </p>
                     <p>
                         <label for="last-name">Last name</label>
                         <input type="text" id="last-name" name="last-name" placeholder="LAST NAME" required>
+                        <span class='error' id="last-name-error" hidden>please enter a valid name</span>
                     </p>
                 </div>
 
@@ -31,10 +34,12 @@
                     <p>
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" placeholder="EMAIL" required>
+                        <span class='error' id="email-error" hidden>please enter a valid email</span>
                     </p>
                     <p>
                         <label for="phone">Phone</label>
                         <input type="tel" id="phone" name="phone" placeholder="PHONE" required>
+                        <span class='error' id="phone-error" hidden>please enter a valid number</span>
                     </p>
                 </div>
 
@@ -42,13 +47,17 @@
                     <p>
                         <label for="pwd">Password</label>
                         <input type="password" id="pwd" name="pwd" placeholder="PASSWORD" required>
+                        <span class='error' id="pwd-error" hidden>please enter a valid password</span>
+                        <span class="error" id="pwd-match-error" hidden>passwords do not match</span>
                     </p>
                     <p>
                         <label for="confirm-pwd">Confirm Password</label>
                         <input type="password" id="confirm-pwd" name="confirm-pwd" placeholder="CONFIRM PASSWORD" required>
+                        <span class='error' id="confirm-pwd-error" hidden>please enter a valid password</span>
+                        <span class="error" id="pwd-match-error" hidden>passwords do not match</span>
                     </p>
                 </div>
-
+                
             </form>
         </div>
         <div id="submit-section">
@@ -58,7 +67,7 @@
             </div>
 
             <div id="log-in-container">
-                Already have an account?<a href="" id=" log-in">Login</a>
+                Already have an account?<a href="" id="log-in">Login</a>
             </div>
 
         </div>
